feat: Add Apache Airflow integration for C to Java pipeline
- Add Airflow DAG files for pipeline orchestration
  - c_to_java_pipeline.py: Original pipeline with src/ modules
  - c_to_java_samples_pipeline.py: Pipeline using samples/ scripts

- Add Docker Compose configuration for Airflow
  - PostgreSQL database for metadata
  - Airflow webserver and scheduler
  - Volume mounts for dags, logs, and project files

- Add comprehensive documentation
  - AIRFLOW_SETUP.md: Installation and basic usage guide
  - AIRFLOW_SAMPLES_GUIDE.md: Detailed workflow explanation

- Add configuration management
  - ConfigManager class for centralized config handling
  - Environment variable support with .env files

- Add comprehensive test suite
  - Unit tests for all core modules
  - Integration tests for workflow validation

- Update .gitignore
  - Exclude sensitive .env files
  - Include .env.example templates for reference
  - Exclude Airflow logs and runtime files

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # watsonx.ai API 설정
 # 1. IBM Cloud에서 API 키 생성: https://cloud.ibm.com/iam/apikeys
-WATSONX_API_KEY=your_api_key_here
+WATSONX_API_KEY=your_watsonx_api_key_here
 
 # 2. Watson Data API 엔드포인트 (자산 업로드용)
 # 미국 남부: https://api.dataplatform.cloud.ibm.com
@@ -26,7 +26,7 @@ TIMEOUT=300
 GITHUB_TOKEN=your_github_token_here
 
 # 3. GitHub 저장소 URL
-GITHUB_REPO_URL=https://github.com/your-username/your-repo.git
+GITHUB_REPO_URL=https://github.com/your-username/your-repo
 
 # 4. GitHub 업로드 활성화 (true/false)
 GITHUB_UPLOAD_ENABLED=true
